# embassy

embassy-atsam4/: Cargo.toml
embassy-atsam4-examples/: Cargo.toml  memory.x
embassy-atsam4/src/: lib.rs  rtc.rs
embassy-macros/: Cargo.toml
embassy-macros/src/: lib.rs
embassy-macros/src/chip/: atsam4.rs
embassy-sam4/: Cargo.toml
embassy-sam4-examples/: Cargo.toml
embassy-sam4/src/: lib.rs
