[package]
name = "embassy-sam4"
version = "0.1.0"
authors = ["John Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]

atsam4e16e = ["atsam4-hal/atsam4e16e"]
atsam4sd32c = ["atsam4-hal/atsam4sd32c"]

[dependencies]
embassy = { version = "0.1.0", path = "../embassy" }
embassy-macros = { version = "0.1.0", path = "../embassy-macros", features = ["atsam4"]}
embassy-extras = {version = "0.1.0", path = "../embassy-extras" }

defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", optional = true }
cortex-m-rt = "0.6.13"
cortex-m = "0.7.1"
embedded-hal    = { version = "0.2.4" }
embedded-dma    = { version = "0.1.2" }
nb = "*"
atsam4-hal = { version = "0.1.7" }
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
